--- a/css.css
+++ b/css.css
@@ -41,7 +41,7 @@
     top: 2px;
     background-color: black;
     height: 300%;
-    width: 100%;
+    width: 99vw;
     left: 2px;
     position: absolute;
 }
